# Enigma

./: .dockerignore  .env.dev  .env.prod  .gitignore  Dockerfile  FullCalendarSnippets.txt  README.md  docker-compose.prod.yml  docker-compose.yml  git_diff.txt  pyproject.toml
Enigma/: asgi.py  settings.py  urls.py  wsgi.py
characters/: admin.py  forms.py  models.py  urls.py  views.py
characters/migrations/: 0001_initial.py  0002_initial.py  0003_gamecharacter_created_at_gamecharacter_status_and_more.py
characters/templates/characters/: _character_card.html  _character_list.html  _pagination.html  character_detail.html  character_form.html  character_list.html  user_character_list.html
communications/: consumers.py  models.py  urls.py  views.py
communications/migrations/: 0001_initial.py
communications/templates/communications/: chat.html
core/: views.py
core/templates/core/: landing.html
enigma/: settings.py  urls.py
event_calendar/: admin.py  forms.py  models.py  telegram_utils.py  urls.py  views.py
event_calendar/migrations/: 0001_initial.py
event_calendar/templates/event_calendar/: event_calendar.html  event_detail.html  event_form.html  event_list.html
main/: views.py
nginx/: Dockerfile  nginx.conf
static/css/: fullcalendar.css  guild.css
static/js/: main.js
templates/: base.html  footer_include.html  nav_menu_include.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_guildmember_avatar.py  0003_remove_guildmember_role_guildmember_bio_and_more.py
(+7 files in other folders)
