[project]
name = "enigma"
version = "0.1.0"
description = ""
authors = [
    {name = "Konstantin",email = "Kostick_zenin@mai.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "markdown (>=3.7,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
