[project]
name = "enigma"
version = "0.1.0"
description = ""
authors = [
    {name = "Konstantin",email = "Kostick_zenin@mai.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "markdown (>=3.7,<4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "channels (>=4.3.1,<5.0.0)",
    "channels-redis (>=4.3.0,<5.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# ... существующие настройки ...
package-mode = false  # Отключаем режим пакета
